more test entries

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2041,6 +2041,11 @@ addons:
                   - 'cdn.cypress.io'
                   - 'repo1.dso.mil'
                   - 'nexus.dev.bigbang.mil'
+                  - "index.docker.io"
+                  - "auth.docker.io"
+                  - "production.cloudflare.docker.com"
+                  - "cdnjs.cloudflare.com"
+                  - "www.googletagmanager.com"
                 location: MESH_EXTERNAL
                 ports:
                   - number: 443
