vault-seal service entry

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2425,7 +2425,7 @@ addons:
                 location: MESH_EXTERNAL
                 ports:
                   - number: 8200
-                    protocol: TCP
+                    protocol: HTTPS
                     name: vault
                 resolution: STATIC
       bbtests:
