--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2008,6 +2008,17 @@ addons:
     # -- Toggle deployment of thanos
     enabled: false
 
+    sso:
+        # -- Toggle SSO for Thanos on and off
+      enabled: false
+
+      # -- OIDC Client ID to use for Thanos
+      client_id: ""
+
+      # -- OIDC Client Secret to use for Thanos
+      client_secret: ""
+
+
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
 
@@ -2020,7 +2031,7 @@ addons:
       chartName: "thanos"
       tag: "13.2.2-bb.4"
 
-    # -- Flux reconciliation overrides specifically for the Jaeger Package
+    # -- Flux reconciliation overrides specifically for the Thanos Package
     flux: {}
 
     # -- Redirect the package ingress to a specific Istio Gateway (listed in `istio.gateways`).  The default is "public".
