--- a/chart/templates/cluster-auditor/helmrelease.yaml
+++ b/chart/templates/cluster-auditor/helmrelease.yaml
@@ -65,5 +65,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
