--- a/chart/templates/elasticsearch-kibana/helmrelease.yaml
+++ b/chart/templates/elasticsearch-kibana/helmrelease.yaml
@@ -73,5 +73,5 @@ spec:
     {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
