--- a/chart/templates/fluentbit/helmrelease.yaml
+++ b/chart/templates/fluentbit/helmrelease.yaml
@@ -90,5 +90,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
