--- a/chart/templates/gatekeeper/helmrelease.yaml
+++ b/chart/templates/gatekeeper/helmrelease.yaml
@@ -58,5 +58,5 @@ spec:
       valuesKey: "overlays"
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
