--- a/chart/templates/grafana/helmrelease.yaml
+++ b/chart/templates/grafana/helmrelease.yaml
@@ -77,6 +77,6 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
 
