--- a/chart/templates/istio/helmrelease.yaml
+++ b/chart/templates/istio/helmrelease.yaml
@@ -68,5 +68,5 @@ spec:
     {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
