--- a/chart/templates/keycloak/helmrelease.yaml
+++ b/chart/templates/keycloak/helmrelease.yaml
@@ -80,5 +80,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.driftDetection.mode }}
+  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
 {{- end }}
