--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -135,7 +135,11 @@ flux:
     timeout: 10m
     cleanupOnFail: true
   driftDetection:
-    mode: disabled
+    mode: enabled
+    ignore:
+    - paths: ["/spec/replicas"]
+      target:
+        kind: Deployment
 
 # -- Global NetworkPolicies settings
 networkPolicies:
