--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2432,9 +2432,9 @@ addons:
             - name: "egress-kube-api-agent-injector-test"
               enabled: true
               spec:
-                podSelector:
-                  matchLabels:
-                    app.kubernetes.io/name: {{ include "vault.name" . }}-agent-injector
+                # podSelector:
+                #   matchLabels:
+                #     app.kubernetes.io/name: {{ include "vault.name" . }}-agent-injector
                 action: ALLOW
                 rules:
                 - from:
@@ -2445,9 +2445,9 @@ addons:
             - name: "egress-kube-api-job-init-test"
               enabled: true
               spec:
-                podSelector:
-                  matchLabels:
-                    app.kubernetes.io/name: {{ include "vault.name" . }}-job-init
+                # podSelector:
+                #   matchLabels:
+                #     app.kubernetes.io/name: {{ include "vault.name" . }}-job-init
                 action: ALLOW
                 rules:
                 - from:
