--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1526,7 +1526,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/anchore-enterprise.git
       path: "./chart"
-      tag: "2.4.2-bb.12"
+      tag: null
+      branch: add-network-policy-egress-upgrade-job
     helmRepo:
       repoName: "registry1"
       chartName: "anchore"
