--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1637,7 +1637,7 @@ addons:
       istio:
         enabled: true
         hardened:
-          enabled: true
+          enabled: false
       ensureDbJobs:
         resources:
           requests:
