--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2417,19 +2417,19 @@ addons:
                     protocol: TLS
                     name: https
                 resolution: DNS
-            # - name: "allow-egress-instance-metadata"
-            #   enabled: true
-            #   spec:
-            #     addresses:
-            #     - 169.254.169.254/32
-            #     ports:
-            #     - number: 80
-            #       name: http
-            #       protocol: HTTP
-            #     location: MESH_EXTERNAL
-            #     resolution: STATIC
-            #     endpoints:
-            #     - address: 169.254.169.254
+            - name: "allow-egress-instance-metadata"
+              enabled: true
+              spec:
+                addresses:
+                - 169.254.169.254/32
+                ports:
+                - number: 80
+                  name: http
+                  protocol: HTTP
+                location: MESH_EXTERNAL
+                resolution: STATIC
+                endpoints:
+                - address: 169.254.169.254
       bbtests:
         enabled: true
         cypress:
