--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2336,6 +2336,9 @@ addons:
                       app.kubernetes.io/instance: "{{ .Release.Name }}"
                       component: webhook
                   topologyKey: kubernetes.io/hostname
+
+
+
       server:
         extraEnvironmentVars:
           VAULT_SKIP_VERIFY: "true"
@@ -2345,48 +2348,68 @@ addons:
           size: 256Mi
         auditStorage:
           size: 256Mi
-        ha:
-          enabled: true
-          replicas: 1
-          apiAddr: "https://vault.dev.bigbang.mil"
-          raft:
-            enabled: true
-            config: |
-              ui = true
+        standalone:
+          config: |
+            ui = true
+      
+            listener "tcp" {
+              tls_disable = 1
+              address = "[::]:8200"
+              cluster_address = "[::]:8201"
+            }
+      
+            storage "file" {
+              path = "/vault/data"
+            }
+      
+            seal "awskms" {
+              region     = "us-gov-west-1"
+              kms_key_id = "mrk-ff723da024254ea2b7f490c68fbc9b9b"
+              endpoint   = "https://kms.us-gov-west-1.amazonaws.com"
+            }
+            
+        # ha:
+        #   enabled: true
+        #   replicas: 1
+        #   apiAddr: "https://vault.dev.bigbang.mil"
+        #   raft:
+        #     enabled: true
+        #     config: |
+        #       ui = true
 
-              listener "tcp" {
-                tls_disable = false
-                address = "[::]:8200"
-                cluster_address = "[::]:8201"
-                tls_cert_file = "/vault/tls/tls.crt"
-                tls_key_file  = "/vault/tls/tls.key"
-                telemetry {
-                  unauthenticated_metrics_access = true
-                }
-              }
+        #       listener "tcp" {
+        #         tls_disable = false
+        #         address = "[::]:8200"
+        #         cluster_address = "[::]:8201"
+        #         tls_cert_file = "/vault/tls/tls.crt"
+        #         tls_key_file  = "/vault/tls/tls.key"
+        #         telemetry {
+        #           unauthenticated_metrics_access = true
+        #         }
+        #       }
 
-              storage "raft" {
-                path = "/vault/data"
+        #       storage "raft" {
+        #         path = "/vault/data"
 
-                retry_join {
-                  leader_api_addr = "https://vault-vault-0.vault-vault-internal:8200"
-                  leader_client_cert_file = "/vault/tls/tls.crt"
-                  leader_client_key_file = "/vault/tls/tls.key"
-                  leader_tls_servername = "vault.dev.bigbang.mil"
-                }
-              }
+        #         retry_join {
+        #           leader_api_addr = "https://vault-vault-0.vault-vault-internal:8200"
+        #           leader_client_cert_file = "/vault/tls/tls.crt"
+        #           leader_client_key_file = "/vault/tls/tls.key"
+        #           leader_tls_servername = "vault.dev.bigbang.mil"
+        #         }
+        #       }
 
-              seal "awskms" {
-                region     = "us-gov-west-1"
-                kms_key_id = "mrk-ff723da024254ea2b7f490c68fbc9b9b"
-                endpoint   = "https://kms.us-gov-west-1.amazonaws.com"
-              }
+        #       seal "awskms" {
+        #         region     = "us-gov-west-1"
+        #         kms_key_id = "mrk-ff723da024254ea2b7f490c68fbc9b9b"
+        #         endpoint   = "https://kms.us-gov-west-1.amazonaws.com"
+        #       }
 
-              telemetry {
-                prometheus_retention_time = "24h"
-                disable_hostname = true
-              }
-              service_registration "kubernetes" {}
+        #       telemetry {
+        #         prometheus_retention_time = "24h"
+        #         disable_hostname = true
+        #       }
+        #       service_registration "kubernetes" {}
       istio:
         hardened:
           enabled: true
