--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -127,6 +127,9 @@ kiali:
   sso:
     enabled: false
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_kiali
+  git:
+    tag: null
+    branch: "renovate/ironbank"
   values:
     istio:
       hardened:
