--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2390,6 +2390,16 @@ addons:
       istio:
         hardened:
           enabled: true
+          customAuthorizationPolicies:
+            - name: allow-egress-instance-metadata
+              enabled: true
+              spec:
+                action: ALLOW
+                rules:
+                - from:
+                  - source:
+                      ipBlocks:
+                        - 169.254.169.254/32
           customServiceEntries:
             - name: "allow-vault-egress"
               enabled: true
@@ -2402,35 +2412,27 @@ addons:
                   - "repo1.dso.mil"
                   - "kms.us-gov-west-1.amazonaws.com"
                   - "kms-fips.us-gov-west-1.amazonaws.com"
-                  - "169.254.169.254"
                 location: MESH_EXTERNAL
                 ports:
                   - number: 443
                     protocol: TLS
                     name: https
                 resolution: DNS
-            - name: allow-egress-instance-metadata
+            - name: "allow-egress-instance-metadata"
               enabled: true
               spec:
                 hosts:
-                  - "169.254.169.254"
-                location: MESH_EXTERNAL
+                - "169.254.169.254"
+                addresses:
+                - 169.254.169.254/32
                 ports:
-                  - number: 80
-                    protocol: http
-                    name: metadata
-                resolution: DNS
-            - name: allow-egress-vault-seal
-              enabled: true
-              spec:
-                hosts:
-                  - "kms.us-gov-west-1.amazonaws.com"
+                - number: 80
+                  name: http
+                  protocol: HTTP
                 location: MESH_EXTERNAL
-                ports:
-                  - number: 8200
-                    protocol: https
-                    name: vault
-                resolution: DNS
+                resolution: STATIC
+                endpoints:
+                - address: 169.254.169.254
       bbtests:
         enabled: true
         cypress:
