--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2401,7 +2401,7 @@ addons:
                       ipBlocks:
                         - 169.254.169.254/32
           customServiceEntries:
-            - name: "allow-egress-cypress-tests"
+            - name: "allow-egress-ci-tests"
               enabled: true
               spec:
                 hosts:
