up thanos values

--- a/chart/templates/thanos/values.yaml
+++ b/chart/templates/thanos/values.yaml
@@ -59,21 +59,20 @@ query:
 
 
 {{- if or .Values.addons.thanos.sso.enabled .Values.istio.enabled }}
-thanos:
-  queryFrontend:
-     spec:
-      {{- $thanosAuthserviceKey := (dig "selector" "key" "protect" .Values.addons.authservice.values) }}
-      {{- $thanosAuthserviceValue := (dig "selector" "value" "keycloak" .Values.addons.authservice.values) }}
-      allInOne:
-        {{- if .Values.addons.thanos.sso.enabled }}
-        labels:
-          {{ $thanosAuthserviceKey }}: {{ $thanosAuthserviceValue }}
-        {{- end }}
-        {{- if .Values.istio.enabled }}
-        annotations:
-          {{ include "istioAnnotation" . }}
-        {{- end }}
+queryFrontend:
+    spec:
+    {{- $thanosAuthserviceKey := (dig "selector" "key" "protect" .Values.addons.authservice.values) }}
+    {{- $thanosAuthserviceValue := (dig "selector" "value" "keycloak" .Values.addons.authservice.values) }}
+    {{- if .Values.addons.thanos.sso.enabled }}
+    podLabels:
+      {{ $thanosAuthserviceKey }}: {{ $thanosAuthserviceValue }}
+      test: mctesterson
     {{- end }}
+    {{- if .Values.istio.enabled }}
+    annotations:
+      {{ include "istioAnnotation" . }}
+    {{- end }}
+  {{- end }}
     
 
 {{- end }}
