Enforce restrict capabilities

--- a/chart/templates/kyverno-policies/values.yaml
+++ b/chart/templates/kyverno-policies/values.yaml
@@ -396,7 +396,7 @@ policies:
   {{- end }}
 
   restrict-capabilities:
-    validationFailureAction: audit
+    validationFailureAction: enforce
     # NEEDS FURTHER JUSTIFICATION
     # Twistlock Defenders require the following capabilities
     # - NET_ADMIN  - Process monitoring and Iptables
@@ -427,6 +427,19 @@ policies:
       - NET_ADMIN
       - NET_RAW
       {{- end }}
+    {{- if .Values.twistlock.enabled }}
+    # Twistlock Defenders run as root to perform real time scanning on the nodes/cluster, including:
+    # - read logs from `/var/log` to watch for malicious processes
+    # - audit modifications to `/etc/passwd` (watching for suspicious changes)
+    # - access the container runtime socket (observing all running containers on a node)
+    exclude:
+      any:
+      - resources:
+          namespaces:
+          - twistlock
+          names:
+          - twistlock-defender-ds*
+    {{- end }}
 
   restrict-host-path-mount:
     validationFailureAction: enforce
