Updated wrapper and packages charts

--- a/chart/templates/wrapper/helmrelease.yaml
+++ b/chart/templates/wrapper/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
   {{- end }}
 
   driftDetection: 
-  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
+  {{- toYaml  $.Values.flux.driftDetection | nindent 4 }}
 ---
 {{ end -}}
 {{- end -}}
