--- a/chart/templates/package/helmrelease.yaml
+++ b/chart/templates/package/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
     
 
   driftDetection: 
-  {{- toYaml .Values.flux.driftDetection | nindent 4 }}
+  {{- toYaml $.Values.flux.driftDetection | nindent 4 }}
   {{- end }}
 ---
 {{ end -}}
