add test values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2717,3 +2717,43 @@ addons:
                   name: https
               resolution: DNS
 
+packages:
+  # This will be used as the namespace for the install, as well as the name of the helm release. If this is changed, the destination service (below) needs to also be changed.
+  jira:
+    dependsOn:
+      - name: istio
+        namespace: bigbang
+
+    enabled: true
+    # Disabling this will bypass creating the istio VirtualService and NetworkPolicies.
+    wrapper:
+      enabled: true
+    git:
+      repo: https://repo1.dso.mil/big-bang/product/community/jira
+      # It is recommended to update this to the latest bb tag
+      tag:  null #1.19.0-bb.2
+      branch: "70-egress-whitelist-jira"
+      path: chart
+    # This section is ignored if `wrapper.enabled`, above, is false. In this case, creation of an ingress for web access is left as an exercise for the reader.
+    istio:
+      enabled: true
+      hosts:
+        - names:
+            # Sub-URL for reaching the web UI; it will be reachable with this, plus your bigbang domain, eg, jira.bigbang.dev.
+            - jira
+          gateways:
+            - public
+          destination:
+            # The second portion of this URL is the namespace; if it was changed above, it needs to be changed here as well.
+            service: jira.jira.svc.cluster.local
+            port: 8080
+    # Anything in this section is passed to the jira chart directly; this allows all of your bigbang configuration to be in a single place.
+    values:
+      istio:
+        enabled: true
+        hardened:
+          enabled: true
+
+      jira:
+        service:
+          port: 8080
