enable bbtests for jira

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2739,6 +2739,8 @@ packages:
       enabled: true
     # Anything in this section is passed to the jira chart directly; this allows all of your bigbang configuration to be in a single place.
     values:
+      bbtests:
+        enabled: false
       istio:
         enabled: true
         hardened:
