--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2740,7 +2740,7 @@ packages:
     # Anything in this section is passed to the jira chart directly; this allows all of your bigbang configuration to be in a single place.
     values:
       bbtests:
-        enabled: false
+        enabled: true
       istio:
         enabled: true
         hardened:
