desired test-values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2301,7 +2301,7 @@ addons:
           subPath: quarkus.properties
 
   vault:
-    enabled: true
+    enabled: false
     git:
       tag: null
       branch: "75-egress-whitelist-vault-3"
