--- a/chart/templates/authservice/values.yaml
+++ b/chart/templates/authservice/values.yaml
@@ -135,6 +135,27 @@ chains:
     {{- end }}
   {{- end }}
 
+  {{- if and .Values.thanos.enabled .Values.thanos.sso.enabled }}
+  thanos:
+    match:
+      header: ":authority"
+    {{- $thanosHosts := (dig "istio" "thanos" "hosts" dict .Values.thanos.values) }}
+    {{- if $thanosHosts }}
+      prefix: {{ tpl ($thanosHosts | first) $ }}
+    callback_uri: https://{{ tpl ($thanosHosts | first) $ }}/graph
+    {{- else }}
+      prefix: {{ printf "tracing.%s" $domainName }}
+    callback_uri: https://tracing.{{ $domainName }}/graph
+    {{- end }}
+    client_id: "{{ .Values.thanos.sso.client_id }}"
+    client_secret: "{{ .Values.thanos.sso.client_secret }}"
+    {{- if not $legacy }}
+    authorization_uri: {{ include "sso.oidc.auth" . }}
+    token_uri: {{ include "sso.oidc.token" . }}
+    logout_redirect_uri: {{ include "sso.oidc.endsession" . }}
+    {{- end }}
+  {{- end }}
+
   {{- if and .Values.tempo.enabled .Values.tempo.sso.enabled }}
   tempo:
     match:
