--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2493,7 +2493,7 @@ addons:
                 location: MESH_EXTERNAL
                 ports:
                   - number: 80
-                    protocol: HTTP
+                    protocol: TCP
                     name: http
                 resolution: DNS
       expose:
