--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2460,6 +2460,9 @@ addons:
   harbor:
     # -- Toggle deployment of harbor
     enabled: false
+    git:
+      tag: null
+      branch: "script-test-update"
 
     # -- Values to pass through to Harbor chart: https://repo1.dso.mil/big-bang/product/packages/harbor.git
     values:
